--- a/SysProgWeb/Views/Home/Index.cshtml
+++ b/SysProgWeb/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Merhaba!</h1>
-    <p>Sistem programlama dersinde CI/CD öğreniyoruz.</p>
+    <p>Sistem programlama dersinde CI/CD öğreniyoruz. Öğrendik.</p>
 </div>
